# ck-mlops

./: .ckr.json  .gitignore  .travis.yml  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTIONS  CONTRIBUTIONS.md  COPYRIGHT  COPYRIGHT.txt  LICENSE  README.md  Repositories.md  appveyor.yml  cmr.yaml  requirements.txt
.cm/: alias-a-mlcube  alias-u-4f26b15ce36edcb5
ck2-repo/: README.md
dataset/.cm/: alias-a-tensor-avgpool-0001  alias-a-tensor-conv-0001  alias-a-tensor-conv-mobilenets-v1-0.75-160  alias-a-tensor-conv-mobilenets-v1-1.0-224  alias-a-tensor-conv1x1-inception-v3  alias-a-tensor-conv1x1-mobilenets  alias-a-tensor-conv3x3-inception-v3  alias-a-tensor-conv3x3-mobilenets  alias-a-tensor-conv5x5-inception-v3  alias-a-tensor-depthwiseconv-mobilenets  alias-a-tensor-depthwiseconv-synthetic-0001  alias-a-tensor-fullyconnected-0001  alias-a-tensor-gemm-0001  alias-a-tensor-lstm-mlperf-rnnt  alias-a-tensor-reshape-mobilenets  alias-a-tensor-reshape-synthetic-0001  alias-a-tensor-reshape-synthetic-0002  alias-a-tensor-resizebilinear-synthetic-0001  alias-a-tensor-softmax-0001  alias-a-tensor-softmax-imagenet  alias-u-0745e598bf8cddcf  alias-u-12f944655aa26f49  alias-u-25300141bb958f78  alias-u-3cda82464112173d  alias-u-40d4b915f0249700  alias-u-42620e61bf8b488b  alias-u-43d681a5d4377abb  alias-u-4ba439f8453e7497  alias-u-56173d720ccb412b  alias-u-59ef5794ab55ccf6  alias-u-687744d81acb8136  alias-u-777a71700cc33c54  alias-u-82a82e3862be74b2  alias-u-8833fd64838902c8  alias-u-a068a8a0e11ab2a3  alias-u-e841933b94edaa96  alias-u-f4407088898d5f10  alias-u-f6b4556b7c2851de  alias-u-fb59154649b8e349  alias-u-fe4f0a8b74356b80
dataset/tensor-avgpool-0001/: data.csv  shape-1000-14-14-14-1.json  shape-1000-15-15-15-1.json  shape-1000-6-6-6-1.json  shape-1024-17-17-3-1.json  shape-1024-7-7-7-1.json  shape-1024-8-8-8-1.json  shape-1280-8-8-3-1.json  shape-1536-8-8-3-1.json  shape-1536-8-8-8-1.json  shape-192-35-35-3-1.json  shape-2048-7-7-7-1.json  shape-2048-8-8-8-1.json  shape-256-35-35-3-1.json  shape-258-35-35-3-1.json  shape-288-35-35-3-1.json  shape-384-35-35-3-1.json  shape-768-17-17-3-1.json
dataset/tensor-conv-0001/: README.md  data.csv  shape-1024-14-14-1-256-1-0.json  shape-128-112-112-3-128-1-1.json  shape-16-28-28-5-32-1-2.json  shape-192-28-28-1-16-1-1.json  shape-2048-7-7-1-512-1-0.json  shape-256-13-13-3-384-1-1.json  shape-256-56-56-1-64-1-0.json  shape-256-63-63-3-512-1-1.json  shape-3-224-224-11-96-4-0.json  shape-3-224-224-7-64-2-3.json  shape-3-227-227-11-96-4-0.json  shape-3-227-227-7-64-2-3.json  shape-3-299-299-3-32-2-0.json  shape-3-500-500-3-64-1-1.json  shape-32-147-147-3-64-1-1.json  shape-384-13-13-3-256-1-1.json  shape-384-13-13-3-384-1-1.json  shape-384-6-6-3-1024-1-1.json  shape-64-250-250-3-128-1-1.json  shape-64-56-56-1-64-1-0.json  shape-64-73-73-1-80-1-0.json  shape-96-27-27-5-256-1-2.json
dataset/tensor-conv-mobilenets-v1-0.75-160/: README.md  data.csv  shape-192-20-20-1-192-1-0.json  shape-24-80-80-1-48-1-0.json  shape-384-5-5-1-768-1-0.json  shape-48-40-40-1-96-1-0.json  shape-768-1-1-1-1001-1-0.json  shape-96-20-20-1-192-1-0.json  shape-96-40-40-1-96-1-0.json
dataset/tensor-conv-mobilenets-v1-1.0-224/: README.md  data.csv  shape-1024-1-1-1-1001-1-0.json  shape-1024-7-7-1-1024-1-0.json  shape-128-28-28-1-256-1-0.json  shape-128-56-56-1-128-1-0.json  shape-256-14-14-1-512-1-0.json  shape-256-28-28-1-256-1-0.json  shape-3-224-224-3-32-2-0.json  shape-32-112-112-1-64-1-0.json  shape-512-14-14-1-512-1-0.json  shape-512-7-7-1-1024-1-0.json  shape-64-56-56-1-128-1-0.json
dataset/tensor-conv1x1-inception-v3/: README.md  data.csv  shape-1280-8-8-1-192-1-0.json  shape-1280-8-8-1-320-1-0.json  shape-1280-8-8-1-384-1-0.json  shape-1280-8-8-1-448-1-0.json  shape-192-35-35-1-32-1-0.json  shape-192-35-35-1-48-1-0.json  shape-192-35-35-1-64-1-0.json  shape-2048-1-1-1-1001-1-0.json  shape-2048-8-8-1-192-1-0.json  shape-2048-8-8-1-320-1-0.json  shape-2048-8-8-1-384-1-0.json  shape-2048-8-8-1-448-1-0.json  shape-256-35-35-1-48-1-0.json  shape-256-35-35-1-64-1-0.json  shape-288-35-35-1-48-1-0.json  shape-288-35-35-1-64-1-0.json  shape-768-17-17-1-128-1-0.json  shape-768-17-17-1-160-1-0.json  shape-768-17-17-1-192-1-0.json
dataset/tensor-conv1x1-mobilenets/: README.md  data.csv  shape-1024-1-1-1-1001-1-0.json  shape-1024-4-4-1-1024-1-0.json  shape-1024-5-5-1-1024-1-0.json  shape-1024-6-6-1-1024-1-0.json  shape-1024-7-7-1-1024-1-0.json  shape-128-10-10-1-128-1-0.json  shape-128-10-10-1-256-1-0.json  shape-128-12-12-1-128-1-0.json  shape-128-12-12-1-256-1-0.json  shape-128-14-14-1-128-1-0.json  shape-128-14-14-1-256-1-0.json  shape-128-16-16-1-128-1-0.json  shape-128-16-16-1-256-1-0.json  shape-128-20-20-1-128-1-0.json  shape-128-20-20-1-256-1-0.json  shape-128-24-24-1-128-1-0.json  shape-128-24-24-1-256-1-0.json  shape-128-28-28-1-128-1-0.json  shape-128-28-28-1-256-1-0.json  shape-128-32-32-1-128-1-0.json  shape-128-4-4-1-256-1-0.json  shape-128-40-40-1-128-1-0.json  shape-128-48-48-1-128-1-0.json  shape-128-5-5-1-256-1-0.json  shape-128-56-56-1-128-1-0.json  shape-128-6-6-1-256-1-0.json  shape-128-7-7-1-256-1-0.json  shape-128-8-8-1-128-1-0.json  shape-128-8-8-1-256-1-0.json  shape-16-112-112-1-32-1-0.json  shape-16-32-32-1-32-1-0.json  shape-16-40-40-1-32-1-0.json  shape-16-48-48-1-32-1-0.json  shape-16-56-56-1-32-1-0.json  shape-16-64-64-1-32-1-0.json  shape-16-80-80-1-32-1-0.json  shape-16-96-96-1-32-1-0.json  shape-192-10-10-1-384-1-0.json  (+102 more)
dataset/tensor-conv3x3-inception-v3/: README.md  data.csv  shape-192-17-17-3-192-2-0.json  shape-192-17-17-3-320-2-0.json  shape-288-35-35-3-384-2-0.json  shape-32-149-149-3-32-1-0.json  shape-448-8-8-3-384-1-1.json  shape-64-35-35-3-96-1-1.json  shape-80-73-73-3-192-1-0.json  shape-96-35-35-3-96-1-1.json  shape-96-35-35-3-96-2-0.json
dataset/tensor-conv3x3-mobilenets/: data.csv  shape-3-128-128-3-16-2-0.json  (+15 more)
docker/: README.md
program/: README.md
program/mlperf-inference-v0.5/ov_mlperf_cpu/: CMakeLists.txt  backend_ov.h  dataset_ov.h  main_ov.cc
program/mlperf-inference-v0.5/ov_mlperf_gpu/: CMakeLists.txt  main_ov.cc
(+8525 files in other folders)
